# workstream

./: .commitlintrc.yaml  .containerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Containerfile  GEMINI.md  LICENSE  Makefile  README.md  SECURITY.md  app.py  claude_code_importer.py  com.workstream.dashboard.plist  config.py  database.py  install.sh  model_registry.json  model_registry.py  podman-compose.yml  pollers.py  pyproject.toml  rebaser.py  reports.py  requirements-dev.txt  requirements.txt  response_validator.py  reviewer.py  run.sh  test_rebase_verification.md  uninstall.sh
.claude/: README.md
.codex/: config.toml
.cursor/rules/: repo.mdc
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.tekton/: pull-request.yaml  push.yaml
agentic_readiness/: generator.py  scanner.py  scorer.py
agents/: activity_stream.py  registry.py  telemetry.py
docs/: CONFIGURATION.md  FEATURES.md  TEAM_SETUP.md  ai-engineer-guidebook.md  ai_readiness_paper.tex  article-workstream-ai-developer-command-center.md  skills-meeting-prep.md
intelligence/: analyzer.py  collector.py  db.py
mcp_server/: release_service_mcp.py  tools.py
scripts/: create_arch_doc.py
static/: index.html
tests/: conftest.py  test_agents_registry.py  test_api_health.py  test_config.py  test_cross_platform.py  test_database.py  test_new_modules.py  test_scorer.py
(+14 files in other folders)
