[project]
name = "workstream"
version = "0.1.0"
description = "Developer productivity dashboard"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501", "F841", "E741", "E402"]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "venv/*",
    "*/mcp_server/*",
    "intelligence/*",
    "pollers.py",
    "reviewer.py",
]

[tool.coverage.report]
fail_under = 30
show_missing = true
